--- a/KEPHISIntranet/appsettings.json
+++ b/KEPHISIntranet/appsettings.json
@@ -1,13 +1,20 @@
 {
-    "connectionStrings": {
-        "DefaultConnection": "Server=AFRICYBA\\SQL2022;Database=IntranetUserDb;Trusted_Connection=True;Encrypt=false;MultipleActiveResultSets=true",
-
-        "Logging": {
-            "LogLevel": {
-                "Default": "Information",
-                "Microsoft.AspNetCore": "Warning"
-            }
-        },
-        "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=CRISTIANO\\SQLEXPRESS;Database=IntranetUserDatabase;Trusted_Connection=True;Encrypt=false;MultipleActiveResultSets=true"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+
+  "Smtp": {
+    "Host": "mail.kephis.org",
+    "Port": "25",
+    "Username": "KephisIntranet@kephis.org",
+    "Password": "Nd0vu#2o25",
+    "SenderEmail": "KephisIntranet@kephis.org"
+  }
 }
